<resources>
    <string name="app_name">CafeLegend</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="closeDrawer">Close the Drawer</string>
    <string name="openDrawer">Open the Drawer</string>
    <string name="home">Home</string>
    <string name="items">Items</string>
    <string name="log_out">Log Out</string>
    <string name="find_us">Find Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_menu">Item Menu</string>
    <string name="description">Description</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="more_detail"><u>More Detail</u></string>
    <string name="cafe_legend_app">Cafe Legend App</string>
    <string name="since_2022">Since 2022</string>
    <string name="find_us_street">Jl. Pakuan No.3, Sumur Batu, Babakan Madang, Bogor Regency, West Java 16810</string>
    <string name="find_us_email">samsantech@gmail.com</string>
    <string name="best_app_development_company">Best App Development Company</string>
    <string name="samsan_tech">Samsan Tech</string>
    <string name="find_us">Find Us</string>
</resources>