<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/repeater_background">

        <TextView
            android:id="@+id/itemDescTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/description"
            android:visibility="invisible"
            />

        <ImageView
            android:id="@+id/itemImageIV"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/logo"
            />

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/itemNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/itemPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/more_detail"
                android:textAllCaps="false"
                android:textStyle="italic"
                android:textSize="12sp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>