<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    >

    <ImageView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/usernameET"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:background="@drawable/edit_text_background"
        />

    <EditText
        android:id="@+id/passwordET"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:backgroundTint="@color/loginBtn"
        />

</LinearLayout>